--- a/templates/website/home.html
+++ b/templates/website/home.html
@@ -14,7 +14,7 @@
     <div class="hero-content">
         <div class="hero-text"> 
             <div class="hero-logo">
-                <img src="/static/images/   hero-logo.png" alt="GRACE SPA" class="hero-logo-image">
+                <img src="/static/images/hero-logo.png" alt="GRACE SPA" class="hero-logo-image">
                 <p>日本とカナダのSPAで長年の実績を積んだPROFESSIONAL<br>本格オイルマッサージで究極の癒しを</p>
             </div>
         </div>
